cleaned up code and reimplemedted new uri and swagger
