# controllers/kitchens.js
@@ -4,7 +4,12 @@ const { ObjectId } = require("mongodb");
 const getAllContacts = async (req, res, next) => {
   // #swagger.tags = ['fromTheKitchenOf']
   /* #swagger.description =  'The name or id is not needed to execute this GET' */
-
+  /* #swagger.security = [{
+          "OAuth2": [
+              'read', 
+              'write'
+          ]
+  }] */
   const filter = Object.fromEntries(Object.entries({}).filter(([_k, v]) => v));
   const collection = await _collection();
   const documents = await collection.find(filter).toArray((err, result) => {
@@ -79,6 +84,12 @@ const updateContact = async (req, res, next) => {
             required: true,
             schema: { $ref: "#/definitions/fromKitchenOfExample" }
     } */
+      /* #swagger.security = [{
+          "OAuth2": [
+              'read', 
+              'write'
+          ]
+  }] */
   // update existing record in database PUT 204
   if (!ObjectId.isValid(req.params.id)) {
     res
@@ -115,8 +126,11 @@ const deleteContact = async (req, res, next) => {
   /* #swagger.description = 'Delete requires an id to complete, use `63536cad46db7e234e064f15`'
    */
   /* #swagger.security = [{
-        "apiKeyAuth": []
-    }] */
+          "OAuth2": [
+              'read', 
+              'write'
+          ]
+  }] */
   // delete records from database DELETE 200
   if (!ObjectId.isValid(req.params.id)) {
     res
